# dumpcat

./: 404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  boot-env.sh  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml  publish.yml
cli-reference/: index.html
configuration/: index.html
docs/: cli-reference.md  configuration.md  examples.md  getting-started.md  index.md  output-formats.md
examples/: index.html
getting-started/: index.html
output-formats/: index.html
search/: search_index.json
src/dumpcat/: cli.py  clipboard.py  config.py  core.py  filters.py  formats.py  init.py  llm.py  reader.py  stats.py  tree.py
tests/: conftest.py  test_cli.py  test_config.py  test_e2e.py  test_filters.py  test_formats.py  test_init.py  test_llm.py  test_reader.py  test_tree.py
